# explore

./: README.md  pyproject.toml
refactor/: callables.py  check.txt  ds.py  ds_serve.py  ntypes.py  reader.py  utils.py  view.py  widget.py
refactor/models/wip/: pipeline.yaml
tests/: test_clsfactory.py  test_delegate.py  test_dynamo.py  test_utils.py
tests/fixtures/blueprints/: a.yaml  b.yaml  complex.yaml  env.yaml  models.yaml  nested.yaml  student.yaml
tests/fixtures/data/: john.yaml  person.yaml
tests/fixtures/models/: student.yaml
tests/fixtures/usecases/: complex_ex.yaml  nested_ex.yaml  nestedab_ex.yaml  student_ex.yaml  xdsapi_ex.yaml
xds/catalogue/blueprints/: driver.yaml  ds.yaml  enum.yaml  enumeration.yaml  env.yaml  field.yaml  query.yaml  widget.yaml  xds.yaml
xds/catalogue/models/: ds.yaml  registry.yaml  widget.yaml
xds/catalogue/models/wip/: callable.yaml  env.yaml
xds/catalogue/templates/: classgen.jinja2
xds/configs/: env.prod.yaml
xds/core/: boot.py  cls_factory.py  dynamo.py  field.py  impl.py  logger.py  registry.py
xds/utils/: dates.py  helpers.py  logger.py
